# senior-thesis

./: .gitignore  LICENSE  README.md
latex/: MainDraft.tex  bibliography.bib
latex/Chapters/: AppendixA.tex  Data.tex  zz_HowToLatex.tex
paper/: .gitignore  MainDraft.aux  MainDraft.lof  MainDraft.lot  MainDraft.tex  MainDraft.toc
paper/Chapters/: Abstract.tex  Acknowledgments.tex  Conclusions.tex  FutureWork.tex  Introduction.tex
paper/auto/: MainDraft.el
src/: pyproject.toml
