[project]
name = "nsf-senior-thesis"
version = "0.1.0"
description = "Code for my senior thesis"
readme = "README.md"
requires-python = ">=3.13,<=3.14"
dependencies = [
    "dask>=2026.6.0",
    "dask-jobqueue>=0.9.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "mpi4py>=4.1.2",
    "narwhals>=2.22.1",
    "netcdf4>=1.7.3",
    "numpy>=2.2.6",
    "polar>=0.0.127",
    "pyproj>=3.7.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "trio>=0.33.0",
    "xarray>=2025.6.1",
]

[dependency-groups]
dev = [
    "marimo>=0.23.11",
    "ruff>=0.15.20",
]
